--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "debug": "~2.6.9",
     "eslint": "^9.19.0",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "gulp-cli": "^3.0.0",
     "gulp-pug": "^5.0.0",
+    "helmet": "^8.0.0",
     "http-errors": "~1.6.3",
+    "https": "^1.0.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.14.1",
     "less-loader": "^12.2.0",
