--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "build-css": "lessc ./public/stylesheets/style.less ./public/stylesheets/style.css",
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "less": "lessc LAB_3/public/stylesheets/style.less LAB_3/public/stylesheets/style.css"
+    "less": "lessc LAB_3/public/stylesheets/style.less LAB_3/public/stylesheets/style.css",
+    "dev:gulp": "gulp dev",
+    "dev:webpack": "webpack serve",
+    "build:gulp": "gulp build",
+    "build:gulp:prod": "gulp build --production",
+    "build:webpack": "webpack --mode=development",
+    "build:webpack:prod": "webpack --mode=production",
+    "build:all": "npm run build:gulp && npm run build:webpack",
+    "build:all:prod": "npm run build:gulp:prod && npm run build:webpack:prod",
+    "npm:register": "npm publish",
+    "npm:unregister": "npm unpublish --force"
   },
   "dependencies": {
     "babel": "^6.23.0",
@@ -43,25 +53,56 @@
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
+    "dart-sass": "^1.25.0",
+    "del": "^8.0.0",
+    "file-loader": "^6.2.0",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
     "gulp-less": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "less": "^4.2.1",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
+    "pug-html-loader": "^1.1.7",
+    "sass": "^1.85.1",
+    "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
-  }
+    "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1"
+  },
+  "description": "Example project with Gulp and Webpack builds",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EdgarIbragimov/MatrixAdminPanel.git"
+  },
+  "keywords": [
+    "gulp",
+    "webpack",
+    "sass",
+    "pug",
+    "babel"
+  ],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EdgarIbragimov/MatrixAdminPanel/issues"
+  },
+  "homepage": "https://github.com/EdgarIbragimov/MatrixAdminPanel#readme"
 }
